[package]
name = "heuristic-dates"
version = "0.1.0"
edition = "2024"

[dependencies]
kamadak-exif = "0.5"
filetime = "0.2"
walkdir = "2.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
pretty_env_logger = "0.5.0"
